fixed text alignment feature

--- a/assets/Kimbala-wavy-section.css
+++ b/assets/Kimbala-wavy-section.css
@@ -104,7 +104,7 @@
 
 .wavy-blog p {
   font-size: 12px;
-  width: 30%;
+  width: 100%;
   margin-left:0;
 }
 
